--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@ https://www.tooplate.com/view/2095-level
                         <div id="mainNav" class="collapse navbar-collapse tm-bg-white">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="#top">Home <span
+                                            class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#tm-section-4">Project Page</a>
+                                    <a class="nav-link" href="#about">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#tm-section-6">About Us</a>
+                                    <a class="nav-link" href="#project">Project</a>
                                 </li>
                             </ul>
                         </div>
@@ -78,12 +79,13 @@ https://www.tooplate.com/view/2095-level
         </div>
     </div>
 
+<!--ABOUT TEAM SECTION --> 
     <div class="tm-section-2">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
 
-                    <h2 class="tm-section-title">Senior Project 2023-2024: California Wildfire Prediction</h2>
+                    <h2 class="tm-section-title" id="about">Senior Project 2023-2024: California Wildfire Prediction</h2>
 
                 </div>
             </div>
@@ -98,43 +100,135 @@ https://www.tooplate.com/view/2095-level
         <div class="container tm-pt-5 tm-pb-4">
             <h1 style="text-align: center;"> Meet The Team!</h1>
             <div class="row text-center">
-                <article class="col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-article">
+                <!-- FARID INFO-->
+                <article class=" tm-article">
+
                     <i class="fa tm-fa-6x fa-cogs tm-color-primary tm-margin-b-20"></i>
                     <h3 class="tm-color-primary tm-article-title-1">Farid Koushaneh</h3>
-                    <p>Machine Learning Team</p>
-
+                    <p class="tm-color-primary">Machine Learning Team</p>
+                    <img src="img/farid.jpeg" style="max-width: 30%;border-radius: 10%;" alt="Farid-Koushaneh">
+                    <p style="text-align: center;">As a Computer Science major with a minor in Mathematics, my passion
+                        lies in the field of data
+                        science and machine learning. In my academic journey, I've found so much joy diving into the
+                        complexities of these fields, and I truly love what I do. For this project, I had the pleasure
+                        of leading the machine learning team and working closely with the project leader and web
+                        development team.</p>
+                    <a href="https://www.linkedin.com/in/farid-koushaneh/" class="tm-color-primary tm-font-normal"
+                        target="_blank" style="font-size: 25px">
+                        <i class="fa fa-linkedin fa-lg"></i>
+                    </a>
+                    <a href="https://github.com/faridko26" class="tm-color-primary tm-font-normal"
+                        style="font-size: 25px">
+                        <i class="fa fa-github fa-lg"></i>
+                    </a>
                 </article>
-                <article class="col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-article">
+                <!-- EDWIN INFO-->
+                <article class=" tm-article" onclick="flipCard(this)">
+
                     <i class="fa tm-fa-6x fa-cogs tm-color-primary tm-margin-b-20"></i>
                     <h3 class="tm-color-primary tm-article-title-1">Edwin Rivera</h3>
-                    <p>Machine Learning Team</p>
+                    <p class="tm-color-primary">Machine Learning Team</p>
+                    <img src="img/edwin.jpg" style="max-width:35%;border-radius: 10%;" alt="Edwin-Rivera">
+                    <p style="text-align: center;">
+                        As a senior in computer science i have big interest in the future for the field I had the
+                        opportunity to contribute to a project focused on predicting wildfires Through machine learning.
+                        Working on the machine learning team was somewhat tedious and challenging, but through the
+                        support of my professor and collaboration with my team and web development team we succeeded in
+                        developing something impactful.
+                    </p>
+                    <a href="https://www.linkedin.com/in/edwin-rivera-0ba277211?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+                        class="tm-color-primary tm-font-normal" target="_blank" style="font-size: 25px">
+                        <i class="fa fa-linkedin fa-lg"></i>
+                    </a>
+                    <a href="https://github.com/edwinriv26" class="tm-color-primary tm-font-normal"
+                        style="font-size: 25px">
+                        <i class="fa fa-github fa-lg"></i>
+                    </a>
 
                 </article>
-                <article class="col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-article">
+
+                <!-- LUIS INFO-->
+                <article class=" tm-article" onclick="flipCard(this)">
+
                     <i class="fa tm-fa-6x fa-code tm-color-primary tm-margin-b-20"></i>
                     <h3 class="tm-color-primary tm-article-title-1">Luis Padilla</h3>
-                    <p>Web Development team and Project Manager</p>
+                    <p class="tm-color-primary">Web Development team and Project Manager</p>
+                    <img src="img/luis.jpg" style="max-width: 30% ;border-radius: 10%;" alt="Luis-Padilla">
+                    <p style="text-align: center;">My name is Luis Padilla, a senior majoring in Computer Science at
+                        CSUN and I am graduating in
+                        Summer of 2024. I am most comfortable with writing in Java but have a bit of experience with C
+                        and
+                        python. For this project, I am the team leader as well as a member of the web development team.
+                        Some of my responsibilities include working on 3D visualization, databases, web development, and
+                        team management. I aspire to work in the cybersecurity field as I am very interested in this
+                        subject</p>
+
+                    <a href="hhttps://github.com/luis-pad" class="tm-color-primary tm-font-normal"
+                        style="font-size: 25px">
+                        <i class="fa fa-github fa-lg"></i>
+                    </a>
+
                 </article>
-                <article class="col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-article">
-                    <i class="fa tm-fa-6x fa-code tm-color-primary tm-margin-b-20"></i>
-                    <h3 class="tm-color-primary tm-article-title-1">Alondra Sanchez</h3>
-                    <p>Web Development team and Scrum Master</p>
-                </article>
-                <article class="col-sm-12 col-md-4 col-lg-4 col-xl-4 tm-article">
+
+                <!--MATTHEW INFO-->
+                <article class=" tm-article" onclick="flipCard(this)">
                     <i class="fa tm-fa-6x fa-code tm-color-primary tm-margin-b-20"></i>
                     <h3 class="tm-color-primary tm-article-title-1">Matthew Bellman</h3>
-                    <p>Web Development team </p>
+                    <p class="tm-color-primary">Web Development team </p>
+                    <img src="img/matt.jpg" style="max-width: 30% ; border-radius: 10%;" alt="Matthew-Bellman">
+                    <p style="text-align: center;">
+                        My name is Matthew Bellman, I'm a Computer Science major, and I'm on the web design team for
+                        this project. Most of my work in this project involves writing both Python code and HTML files,
+                        due to this project using Flask to host the web application. My main responsibilities are the
+                        data sets page and the data set downloader. The downloader converts the pre-processed data into
+                        human readable files based on what data the user wants to see.
+                    </p>
+
+                    <a href="https://github.com/BellMatt38" class="tm-color-primary tm-font-normal"
+                        style="font-size: 25px">
+                        <i class="fa fa-github fa-lg"></i>
+                    </a>
                 </article>
+
+                <!--ALONDRA INFO-->
+                <article class=" tm-article" onclick="flipCard(this)">
+
+                    <i class="fa tm-fa-6x fa-code tm-color-primary tm-margin-b-20"></i>
+                    <h3 class="tm-color-primary tm-article-title-1">Alondra Sanchez</h3>
+                    <p class="tm-color-primary">Web Development team and Scrum Master</p>
+                    <img src="img/me.jpg" style="max-width: 30%;  border-radius: 10%;" alt="Alondra-Sanchez">
+                    <p style="text-align: center;">
+                        My name is Alondra Sanchez, a senior majoring in Computer Science and I'll be graduating Spring
+                        2024. My strengths have to be frontend and web design, It's what I enjy doing the most. For this
+                        project I was a part of the web development team as well as the Scrum Master. Most of my work as
+                        part of the web development team has been UI design and communicating with the machine learning
+                        team to make sure I understand and add their work into our website effectively.
+                    </p>
+
+                    <a href="https://github.com/Whimss" class="tm-color-primary tm-font-normal"
+                        style="font-size: 25px">
+                        <i class="fa fa-github fa-lg"></i>
+                    </a>
+                    <a href="mailto:sanchez.alondra7@gmail.com" class="tm-color-primary tm-font-normal"
+                        style="font-size: 25px">
+                        <i class="fa fa-inbox fa-lg"></i>
+                    </a>
+
+
+
+                </article>
+
             </div>
         </div>
     </div>
 
-    <div class="tm-section-2">
+    <!-- ABOUT PROJECT SECTION-->
+    <div class="tm-section-2"id="project">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
 
-                    <h2 class="tm-section-title">About California Wildfire Prediction</h2>
+                    <h2 class="tm-section-title" >About California Wildfire Prediction</h2>
 
                 </div>
             </div>
@@ -146,7 +240,7 @@ https://www.tooplate.com/view/2095-level
             <polygon fill="#ee5057" points="0,0  100,0  50,60"></polygon>
         </svg>
         <div class="container tm-pt-5 tm-pb-4">
-            <div class="row">
+            <div class="row" >
                 <article class=" tm-article">
                     <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Purpose</h3>
                     <p>Our project aims to utilize the power of machine learning to provide an accurate and timely
@@ -172,10 +266,10 @@ https://www.tooplate.com/view/2095-level
                     </p>
                 </article>
                 <article class="tm-article">
-                    <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Technologies & Skills
+                    <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Technologies, Frameworks, & Skills
                     </h3>
                     <p>
-                        The technologies used to create our platform were:
+                        The technologies and frameworks used to create our platform were:
                         <br> <a href="https://jupyter.org/" class="tm-color-primary">Jupyter</a>: Jupyter provides
                         acomprehensive,
                         interactive, and versatile environment that supports the entire machine learning workflow: from
@@ -212,16 +306,49 @@ https://www.tooplate.com/view/2095-level
         </div>
     </div>
 
+    <!--PROJECT GALLERY AND DEMO SECTION-->
+    <div class="tm-section-2">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
 
+                    <h2 class="tm-section-title">Project Gallery & Demo</h2>
 
-
-
-
+                </div>
+            </div>
+        </div>
     </div>
-    </div>
-    </div>
+    <div class="tm-section tm-position-relative">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none"
+            class="tm-section-down-arrow">
+            <polygon fill="#ee5057" points="0,0  100,0  50,60"></polygon>
+        </svg>
+        <div class="container tm-pt-5 tm-pb-4">
+            <div class="row">
+                <article class=" tm-article">
+                    <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Gallery</h3>
+                    <p>
+                    </p>
+                </article>
+                <article class=" tm-article">
+                    <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Demo</h3>
+                    <p>
+                    </p>
+                </article>
+                <article class="tm-article">
+                    <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Extra
+                    </h3>
+                    <p>
+
+                    </p>
+                </article>
+
+            </div>
+        </div>
     </div>
 
+
+    <!-- FOOTER CSUN INFO SECTION -->
     <div class="tm-section tm-section-pad tm-bg-img tm-position-relative" id="tm-section-6">
         <div class="container ie-h-align-center-fix">
 
@@ -262,7 +389,7 @@ https://www.tooplate.com/view/2095-level
             </div>
         </div>
     </footer>
-    </div>
+
 
     <!-- load JS files -->
     <script src="js/jquery-1.11.3.min.js"></script> <!-- jQuery (https://jquery.com/download/) -->
