--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ https://www.tooplate.com/view/2095-level
     <!-- Google web font "Open Sans" -->
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css"> <!-- Font Awesome -->
     <link rel="stylesheet" href="css/bootstrap.min.css"> <!-- Bootstrap style -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="css/datepicker.css" />
@@ -52,8 +53,7 @@ https://www.tooplate.com/view/2095-level
                         <div id="mainNav" class="collapse navbar-collapse tm-bg-white">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#top">Home <span
-                                            class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#about">About Us</a>
@@ -79,13 +79,14 @@ https://www.tooplate.com/view/2095-level
         </div>
     </div>
 
-<!--ABOUT TEAM SECTION --> 
+    <!--ABOUT TEAM SECTION -->
     <div class="tm-section-2">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
 
-                    <h2 class="tm-section-title" id="about">Senior Project 2023-2024: California Wildfire Prediction</h2>
+                    <h2 class="tm-section-title" id="about">Senior Project 2023-2024: California Wildfire Prediction
+                    </h2>
 
                 </div>
             </div>
@@ -205,8 +206,7 @@ https://www.tooplate.com/view/2095-level
                         team to make sure I understand and add their work into our website effectively.
                     </p>
 
-                    <a href="https://github.com/Whimss" class="tm-color-primary tm-font-normal"
-                        style="font-size: 25px">
+                    <a href="https://github.com/Whimss" class="tm-color-primary tm-font-normal" style="font-size: 25px">
                         <i class="fa fa-github fa-lg"></i>
                     </a>
                     <a href="mailto:sanchez.alondra7@gmail.com" class="tm-color-primary tm-font-normal"
@@ -223,12 +223,12 @@ https://www.tooplate.com/view/2095-level
     </div>
 
     <!-- ABOUT PROJECT SECTION-->
-    <div class="tm-section-2"id="project">
+    <div class="tm-section-2" id="project">
         <div class="container">
             <div class="row">
                 <div class="col text-center">
 
-                    <h2 class="tm-section-title" >About California Wildfire Prediction</h2>
+                    <h2 class="tm-section-title">About California Wildfire Prediction</h2>
 
                 </div>
             </div>
@@ -240,7 +240,7 @@ https://www.tooplate.com/view/2095-level
             <polygon fill="#ee5057" points="0,0  100,0  50,60"></polygon>
         </svg>
         <div class="container tm-pt-5 tm-pb-4">
-            <div class="row" >
+            <div class="row">
                 <article class=" tm-article">
                     <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Purpose</h3>
                     <p>Our project aims to utilize the power of machine learning to provide an accurate and timely
@@ -266,7 +266,8 @@ https://www.tooplate.com/view/2095-level
                     </p>
                 </article>
                 <article class="tm-article">
-                    <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Technologies, Frameworks, & Skills
+                    <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Technologies,
+                        Frameworks, & Skills
                     </h3>
                     <p>
                         The technologies and frameworks used to create our platform were:
@@ -325,24 +326,68 @@ https://www.tooplate.com/view/2095-level
         </svg>
         <div class="container tm-pt-5 tm-pb-4">
             <div class="row">
-                <article class=" tm-article">
+                <article class=" tm-article col-sm-12">
                     <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Gallery</h3>
-                    <p>
-                    </p>
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/ascreen1.png" class="d-block w-100" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/mscreen1.png" class="d-block w-100" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/mscreen2.png" class="d-block w-100" alt="Third slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/mscreen3.png" class="d-block w-100" alt="Fourth slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/lscreen1.png" class="d-block w-100" alt="Fifth slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/lscreen2.png" class="d-block w-100" alt="Sixth slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/lscreen3.png" class="d-block w-100" alt="Seventh slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/lscreen4.png" class="d-block w-100" alt="Eighth slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/lscreen5.png" class="d-block w-100" alt="Ninth slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/ascreen2.png" class="d-block w-100" alt="Tenth slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/ascreen3.png" class="d-block w-100" alt="Eleventh slide">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </article>
-                <article class=" tm-article">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-12">
+                <article class="tm-article" style="width: 90%; margin: 0 auto;">
                     <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Demo</h3>
-                    <p>
-                    </p>
+                    <div style="position: relative; padding-bottom: 56.25%; /* 16:9 Aspect Ratio */">
+                        <video style=" width: 100%; height: 100%;" controls>
+                            <source src="videos/demo.mp4" type="video/mp4">
+                        </video>
+                    </div>
                 </article>
-                <article class="tm-article">
-                    <h3 class="tm-color-primary tm-article-title-1" style="text-align: center;">Extra
-                    </h3>
-                    <p>
-
-                    </p>
-                </article>
-
             </div>
         </div>
     </div>
@@ -394,6 +439,7 @@ https://www.tooplate.com/view/2095-level
     <!-- load JS files -->
     <script src="js/jquery-1.11.3.min.js"></script> <!-- jQuery (https://jquery.com/download/) -->
     <script src="js/popper.min.js"></script> <!-- https://popper.js.org/ -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script> <!-- https://getbootstrap.com/ -->
     <script src="js/datepicker.min.js"></script> <!-- https://github.com/qodesmith/datepicker -->
     <script src="js/jquery.singlePageNav.min.js"></script>
